--- a/smartdns/smartdns-custom.conf
+++ b/smartdns/smartdns-custom.conf
@@ -2,7 +2,7 @@ force-AAAA-SOA yes
 # 国内域名， 生成脚本 https://github.com/huifukejian/test/blob/master/update-china-list.sh
 conf-file /etc/smartdns/smartdns-domains.china.conf
 speed-check-mode tcp:443,tcp:80,ping
-bind: 6053
+bind: 6053 -group china
 bind: 5335 -group gfwlist
 
 server-https https://doh.pub/dns-query -group china -exclude-default-group
